--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	console.log("connecting to "+ host +" "+ port);
 	var x=Math.floor(Math.random() * 10000); 
 	var cname="orderform-"+x;
-	mqtt = new Paho.MQTT.Client("wss://"+host,port,cname);
+	mqtt = new Paho.MQTT.Client(host,port,cname);
 	//document.write("connecting to "+ host);
 	var options = {
         timeout: 3,
