--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 	mqtt = new Paho.MQTT.Client(host,port,cname);
 	//document.write("connecting to "+ host);
 	var options = {
+        useSSL:true,
         timeout: 3,
 		onSuccess: onConnect,
 		onFailure: onFailure,
