--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
 		out_msg=out_msg+"Message received Topic "+r_message.destinationName;
 		//console.log("Message received ",r_message.payloadString);
 		console.log(out_msg);
-		console.log(r_message.payloadString.substr(0,7));
-        console.log('{"name":"');
         if(r_message.payloadString.substr(0,9) == '{"name":"'){
             loc_msg = JSON.parse(r_message.payloadString);
             if(loc_msg['name'] != null && loc_msg['name'] == "NewFeatureType"){
-                document.getElementById("messages").innerHTML = loc_msg['features'][0]['geometry']['coordinates'][0];
+                document.getElementById("messages").innerHTML = "Location: " + loc_msg['features'][0]['geometry']['coordinates'][0] + "-" +  "temperture: " + loc_msg['features'][0]['properties']['temp'][0][0];
                 geoJsonLocation(loc_msg);
             }
         }else{
